--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
     sdk: flutter
 
   cupertino_icons: ^1.0.2
-  flutter_onboarding_slider: ^1.0.11
   go_router: ^13.0.0
   shared_preferences: ^2.2.2
   flutter_form_builder: ^9.1.1
@@ -20,6 +19,7 @@ dependencies:
   lucide_icons: ^0.257.0
   flutter_local_notifications: ^16.3.0
   form_builder_validators: ^9.1.0
+  introduction_screen: ^3.1.12
 
 dev_dependencies:
   flutter_test:
