--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,13 @@ flutter:
   assets:
     - assets/
     - assets/svg/
+    - assets/fonts/
 
-  # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  fonts:
+    - family: ColorBasic
+      fonts:
+        - asset: assets/fonts/colorbasic.otf
+
+    - family: EDD
+      fonts:
+        - asset: assets/fonts/edd.ttf
